# dna-builder

./: .gitignore  .prettierrc  AGENTS.md  FINAL_TEST_REPORT.md  README.md  README_TESTS.md  RUN_TESTS.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  biome.json  eslint.config.mts  index.html  login_jjj.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  深渊统计.md
.claude/: settings.local.json
.github/workflows/: alpha.yml  publish.yml  winget.yml
.husky/: pre-commit  update-version.js
.planning/: config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.playwright/: cli.config.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
apps/dob-bot/: .gitignore  README.md  package.json  tsconfig.json
mcp_server/: Cargo.toml  README.md  build.mjs
mcp_server/src/: lib.rs  main.rs  protocol.rs  server.rs  tools.rs  util.rs
misc/: getimg.sh  process_images.py
public/: sw-app.js  versions.json
public/download/: latest.json
public/imgs/: getimg.sh
public/tpl/: EMLuaConst.lua  engine.d.ts  tsconfig.json
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.ts  docker-compose.yml  package.json  tsconfig.json
server/drizzle/: 0000_lucky_butterfly.sql  0001_fluffy_deathbird.sql  0002_lumpy_black_queen.sql  0003_cool_marauders.sql  0004_hot_shiva.sql  0005_natural_trish_tilby.sql  0006_workable_gauntlet.sql  0007_simple_annihilus.sql  0008_spotty_brood.sql  0009_marvelous_pepper_potts.sql  0010_daffy_vision.sql  0011_breezy_spectrum.sql  0012_polite_red_skull.sql  0013_ancient_argent.sql  0014_lucky_peter_parker.sql  0015_tough_eternals.sql  0016_square_mandrill.sql  0017_fluffy_lenny_balinger.sql  0018_yummy_romulus.sql  0019_spooky_peter_parker.sql  0020_natural_masque.sql  0021_regular_the_hood.sql  0022_nostalgic_glorian.sql  0023_broken_nekra.sql  0024_serious_newton_destine.sql  0025_lowly_silvermane.sql
server/src/: ai.ts  api.ts  cron.ts  index.ts  updatetool.ts  upload.ts
skills/dna-builder-data-mcp-query/: SKILL.md
skills/dna-builder-script-mcp-debug/: SKILL.md
src/: App.vue  components.d.ts  env.ts  i18n.ts  login.test.ts  login.ts  main.ts  router.ts  style.css  util.test.ts  util.ts  vercount.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: dob-script.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cloudgame_init.js  lib.rs  main.rs  util.rs
src-tauri/src/submodules/: async_tokio.rs  color.rs  color_match.rs  d3d11.rs  dll_call.rs  font_ocr.rs  fx.rs  hotkey.rs  input.rs  jsdnn.rs  jsmat.rs  jstimer.rs  logger.rs  mod.rs  mono_depth.rs  ocr.rs  predict_rotation.rs  repak_tools.rs  route.rs  script.rs  script_builtin.rs  script_console.rs  script_mcp.rs  script_vision.rs  setvol.rs  tpl.rs  tpl_match.rs  util.rs  win.rs
src/admin/: AdminCrudPage.vue  AdminHome.vue  AdminLayout.vue  BuildManagement.vue  GuideManagement.vue  Home.vue  Login.vue  RankingManagement.vue  RoomManagement.vue  ScriptManagement.vue  ShopProductManagement.vue  ShopRedemptionManagement.vue  TimelineManagement.vue  TodoManagement.vue  UserManagement.vue  crud-config.ts
src/api/: app.ts  buildAgent.ts  client.ts  cloudgame.ts  dna-sign.ts  external.ts  graphql.ts  mutation.ts  openai.ts  query.ts  rtc.ts  swindow.ts  update.ts
src/assets/: Engine.ini  GameUserSettings.ini  emoji.json
src/components/: AIChatDialog.vue  ASTHelp.vue  ActivityCalendar.vue  AniTabs.vue  AutoBuild.vue  BackpackPuzzle.vue  BackpackPuzzle.worker.ts  BossSource.vue  BoxDropItem.vue  BuffCell.vue  BuffEditer.vue  BuildWeaponCard.vue  CharActionEditor.vue  CharAttrShow.vue  CharHPCurve.vue  CharHPCurveConv.vue  CharIntronShow.vue  CharSelect.vue  CharSkillShow.vue  CheckAnimationButton.vue  CheckBoxGroup.vue  CodeEditor.highlight.worker.ts  CodeEditor.vue  CollapsibleSection.vue  Combobox.vue  CopyID.vue  CronInput.vue  CustomBuffEditor.vue  DBAbyssDungeonDetailItem.vue  DBAccessoryDetailItem.vue  DBAchievementDetailItem.vue  DBBookDetailItem.vue  DBCharDetailItem.vue  DBDialogueCard.vue  DBDraftDetailItem.vue  DBDungeonDetailItem.vue  DBDynQuestDetailItem.vue  DBEventDetailItem.vue  DBFishDetailItem.vue  DBFishSpotDetailItem.vue  (+119 more)
src/composables/: useBabylonScene.ts  useCharSettings.test.ts  useCharSettings.ts  useInitialScrollToSelectedItem.ts  useSearchParam.ts  useShooterGame.ts
src/data/: AI.md  CharBuild.test.ts  CharBuild.ts  CharBuild.worker.ts  CharBuildHelper.ts  LevelUpCalculator.ts  LevelUpCalculator.worker.ts  LevelUpCalculatorImpl.ts  README.md  achievement.data.ts  achievement.json  ast.ts  base.data.ts  buff.data.ts  char.data.ts  data-pack-bridge.ts  data-pack-rewrite-plugin.ts  data-pack-runtime.ts  data-pack.ts  data-types.ts  data.json  data.xlsx  effect.data.ts  export.py  game-const.ts  imgs-runtime.ts  index.ts  leveled.test.ts  leveled.ts  mod.data.ts  monster.data.ts  package.json  pnpm-lock.yaml  time.data.ts  tsconfig.json  versionGate.ts  vitest.config.ts  weapon.data.ts
src/game/: types.ts
src/polyfills/: async_hooks.ts
src/shared/: buildAgentSystemPrompt.ts
src/store/: charSettings.ts  cloudgame.ts  counter.test.ts  counter.ts  dataPack.ts  db.ts  fpsGame.ts  game.ts  inv.ts  mihan.test.ts  mihan.ts  nodeEditor.ts  scriptRuntime.ts  setting.ts  timeline.ts  tour.ts  ui.ts  user.ts
src/test/: vitest-setup.ts
src/utils/: abyss-best-time.test.ts  abyss-best-time.ts  cron.test.ts  (+50 more)
tools/: bake_masked_plant_texture.py  build-app.mjs  build_msix.ts  canonicalize_tailwind_classes.ts  count_effective_loc.ts  data-pack.ts  export_story_txt.ts  export_umap_web_scene.ts  generateApiCalls.ts  generate_title_frame_render.mjs  i18n_check.ts  i18n_check_report.json  i18n_tool.ts  icon_tool.ts  imgs-pack.ts  imgs-upload.ts  import_i18n_data.ts  prepare-dob-script.mjs  tsconfig.json  update_map_cache.ts
(+375 files in other folders)
