[package]
name = "dna_mcp_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dna_mcp_server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
image = "0.25"
base64 = "0.22.1"
webp = "0.3.1"
rmcp = { version = "0.8.0", features = [
    "server",
    "transport-async-rw",
    "transport-streamable-http-server",
] }
schemars = "1.1"
axum = "0.8.8"
tower = "0.5.2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
] }
windows-core = "0.62.2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
