[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcp_server"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
rmcp = { version = "0.7.0", features = ["server", "transport-streamable-http-server", "schemars"] }
schemars = "1.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
