[package]
name = "dna-builder"
version = "0.11.14"
description = "A DNA Builder"
authors = ["pa001024"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dna_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.2"
tokio = { version = "1", features = ["full"] }
futures-concurrency = "7.7.1"
futures-lite = "2.6.1"
thiserror = "2.0.18"
lazy_static = "1"
widestring = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
base64 = "0.22.1"
sevenz-rust2 = "0.20.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
    "blocking",
] }
arboard = "3.6.1"
tokio-tungstenite = { version = "0.25", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.25" }
url = "2.5.0"
futures-util = "0.3.31"
http = "1.1.0"
scopeguard = "1.2.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
window-vibrancy = "0.7.1"
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System",
    "Win32_System_Variant",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage",
    "Win32_Storage_Xps",
    "Win32_System_LibraryLoader",
] }
windows-core = "0.62.2"
opencv = { version = "0.98.1" }
boa_engine = "0.21.0"
boa_gc = "0.21.0"
boa_runtime = "0.21.0"
hotwatch = "0.5.0"
tauri-plugin-global-shortcut = "2"
